static/css/style.css
html {
 height:100%;
 margin:0; padding:0;
}
body {
 margin:0; padding:0;
 height:100%;
 font-family:'Open Sans';
 font-size:13px;
 color:#393939;
}

.tbl { display:table; content:''; clear:both; width:100%; }

h1, h2, h3, h4, h5, h6 { font-family:'Open Sans';}

/* LAYOUT */
.container {  width:100%; height:100%; background:#FFFFFF; display:table; content: ''; clear:both; margin:0; padding:0; }

.top-container { display:table-row; width:100%; height:100px; vertical-align:top;}
.bot-container { display:table-row; width:100%; height:100%; vertical-align:top;}

.container .top { width:100%;display:table; content:''; clear:both;height:100px;background: url('../static/img/bg.png'); }
.container .top .logo { display:table-cell; width:200px; height:100px; vertical-align:middle; text-align:center; }
.container .top .nav { display:table-cell;  }
.bot { display:table;content:'';clear:both; width:100%; height:auto; }
.bot .sidebar { display:table-cell; width:200px;  background:#F3F3F3 !important; box-shadow: inset -10px 0px 20px -10px #C6C6C6 !important; vertical-align:top; }
.bot-cell { width:100%; height:100%; display:table-cell; }


.sidebar.hidden-xs { display:table-cell !important; }
@media (max-width: 767px) {
  .hidden-xs,
  tr.hidden-xs,
  th.hidden-xs,
  td.hidden-xs {
    display: none !important;
  }
  .sidebar.hidden-xs { display:none !important; }
}

.bot .content { display:table-cell; background:#FFFFFF; vertical-align:top; padding:15px 10px; }
.right .content { padding-top:10px; }

/* HEADER -> NAV PILLS */
.bar .nav-pills { float: left; }
.bar .nav-pills > li.active > a { background:#525252; color:#FFFFFF; }
.bar .nav-pills > li > a:hover, .bar .nav-pills > li > a:focus { background:#525252; color:#FFFFFF; }
.bar .nav-pills > li > a { color:#FFFFFF;   padding:10px 15px; margin:0; }
.bar .nav-pills > li { height:20px; margin-top:10px; line-height:20px; margin-right:10px; }
.bar .nav-pills > li span.icon, .bar .nav-pills > li span.fa { margin-right:10px; }
.bar .nav-pills > li span.label { margin-left:10px; position:relative; top:-2px; font-weight:normal; }

/* HOV -> DROPDOWNS */
.hov { margin:0px; height:60px; float:right; min-width:10px; }
.hov .btn-group { margin-right:10px;z-index:101; }
.hov .con { color:#FFFFFF;text-decoration:none; display:block; height:40px; padding:10px 15px; line-height:20px; border-radius:5px; font-size:14px; }
.hov .con:hover { color:#428bca; background:#FFFFFF !important;} .hov .con:focus {  color:#FFFFFF; background:#7DB4D8 !important; }
.hov .dropdown-menu { font-size:12px;margin-top:-4px; -webkit-border-top-right-radius: 0px;-moz-border-radius-topright: 0px;border-top-right-radius: 0px; border: 0px; }
.hov .dropdown-menu a:hover { background: #7DB4D8; color: #FFFFFF;}
.hov .label { border-radius:10px; font-size:8px; font-weight:normal; position:absolute; top:2px; left:22px; }

/* BREADCRUMBS */
.crumbs .breadcrumb { height:40px; padding:0; margin-left:10px; font-size:13px; }
.crumbs li a { height:40px; padding:0px 3px; margin:0; }

/* SIDEBAR */
.sidebar .accordion a { color:#777777; width:100%; text-align:left; padding: 10px 12px; font-size:13px; border-radius: 0px !important; border-top:0px; border-left: 0px; border-right:0px; box-shadow: inset -10px 0px 20px -10px #C6C6C6; }
.sidebar .accordion-heading a { background:#F3F3F3; border-bottom: 1px solid #CCC; }
.sidebar .accordion-heading a:hover { padding-left: 8px; background:#FFFFFF; border-left: 4px solid #448FBA;  border-bottom: 1px solid #CCC; color:#448FBA; }
.sidebar .accordion-body a { background:#FFFFFF; border-bottom-color:#dddddd; border-bottom-width:1px; border-bottom-style:dotted;   }
.sidebar .accordion-body a:hover { padding-left: 8px; border-left: 4px solid #AFD5EA; border-bottom-color:#AAA; border-bottom-width:1px; border-bottom-style:dotted; color:#448FBA;  }
.sidebar .accordion-body a:last-child { border-bottom:1px solid #CCC !important; }
.sidebar .accordion .caret { float:right; position:relative; top:8px; }
.sidebar .accordion .label { float:right; position:relative; top:2px; padding:3px 3px; font-weight:normal; }

@-moz-document url-prefix() {
 .sbtn { white-space: normal !important; }
}

.sidebar .accordion .icon { position:relative; top:2px; font-size:14px;  }
.sidebar .accordion-body a.active, .sidebar .accordion-body a.active:hover { background:#FFF; box-shadow: inset -10px 0px 20px -10px #FFF !important; border-bottom-color:#AAA; border-bottom-width:1px; border-bottom-style:dotted; color:#448FBA; }
.sidebar .accordion span.r-caret {
 border-top: 15px solid transparent;
 border-bottom: 15px solid transparent;
 border-left: 6px solid #AFD5EA;
 display: inline-block;
 height: 0px;
 width: 0px;
 position:absolute;
 left:0px;
 margin-top:-5px;
}


#search-icon { position:absolute; top:111px; left:8px; color:#BBBBBB; font-size:15px; }
  .tt-suggestion {
   font-family: 'Open Sans', sans-serif; font-size:13px;
  }
  .tt-suggestion .repo-language {
    float: right;
    font-style: italic;
    font-size:12px;
  }
  .tt-suggestion .repo-name {
    font-weight: bold;
  }

  .tt-suggestion .repo-description {
    font-size: 12px;color:#999999;
  }
  .tt-dropdown-menu {
    width: 422px;
    margin-top: 12px;
    padding: 8px 0;
    background-color: #fff;
    border: 1px solid #ccc;
    border: 1px solid rgba(0, 0, 0, 0.2);
    -webkit-border-radius: 5px;
-webkit-border-top-left-radius: 0;
-moz-border-radius: 5px;
-moz-border-radius-topleft: 0;
border-radius: 5px;
border-top-left-radius: 0;
    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
    -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
      box-shadow: 0 5px 10px rgba(0,0,0,.2);
   left:200px !important;
   top:-13px !important;
  }
  .tt-suggestion {
    padding: 3px 20px;
    line-height: 24px;
    
  }

  .tt-suggestion.tt-is-under-cursor {
    color: #333333;
    background-color: #E3F3FB;
  }

  .tt-suggestion p {
    margin: 0;
  }
/* ... */

